dhall/tests/type-errors/unit/MistypedToMap4.txt
Type error: error: Annotation mismatch
 --> <current file>:1:0
  |
1 | toMap { foo= 1, bar= 4 } : List { mapKey : Text, mapValue : Text }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Annotation mismatch
  |
